[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-utils"
version = "0.1.0"
description = "A collection of personal CLI utilities for Linux"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
harvest = "linux_utils.core:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["linux_utils*"]